<resources>
    <string name="app_name">Organ Eyes</string>
    <string name="register_prompt">Register</string>
    <string name="login_prompt">Log In</string>
    <string name="textviewregister_prompt">Don\'t have an account? Click below to sign up</string>
    <string name="signup_prompt">Sign Up</string>
    <string name="email_prompt">Enter your email</string>
    <string name="password_prompt">Enter your Password</string>

    <string name="name_prompt">Enter your First Name</string>
    <string name="surname_prompt">Enter your Surname</string>
    <string name="new_password_prompt">Enter new Password</string>
    <string name="confirm_password_prompt">Confirm your Password</string>
    <string name="dob_prompt">Date of Birth</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Organ Eyes</string>
    <string name="nav_header_subtitle">Organise yourself Better</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_user">Current user</string>

    <string name="info">Info</string>
    <string name="logout">Logout</string>

    <string name="Reminders">Reminders</string>
    <string name="Budget">Budget</string>
    <string name="Milestones">Milestones</string>
    <string name="Schedule">Schedule</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--FOR MILESTONES MODULE-->
    <string name="Title_header">Title</string>
    <string name="text_header">Enter Text</string>
    <string name="spending_date">Date</string>
    <string name="user">User</string>

    <!--FOR SPENDING MODULE-->
    <string name="spending_date_format">Date e.g. 01/01/1970</string>
    <string name="spending_amount">Amount spent</string>
    <string name="spending_details">Details</string>
    <string name="spending_add_detail">Add an Item</string>
    <string name="spending_remove_detail">Delete Item</string>
    <string name="spending_sum_detail">Total (Click date to change)</string>
    <string name="spending_total">Total Spent Today: </string>
    <string name="spending_weekly">Past week (7 days): </string>
    <string name="spending_monthly">Past month (30 days) : </string>
    <string name="spending_dateTitle">DATE</string>
    <string name="spending_amountTitle">AMOUNT</string>
    <string name="spending_detailsTitle">TITLE</string>

    <!--FOR SCHEDULE MODULE-->
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thur</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="no_notes_info">No Notes yet…</string>
    <!--FOR REMINDERS MODULE-->
    <string name="Alert_name">Title of Reminder</string>
    <string name="Alert_details">Extra details</string>
    <string name="set_Alert_date">Set date</string>
    <string name="Alert_date">Reminder date</string>
    <string name="set_Alert_time">Set time</string>
    <string name="Alert_time">Reminder time</string>
    <!--FOR SCHEDULE MODULE-->
    <string name="schedule_title">Class/Event/Title</string>
    <string name="prompt_time_from">From</string>
    <string name="prompt_duration">Duration</string>
    <string name="prompt_date">Date (optional)</string>>
    <string name="time_select">Select time</string>
    <string name="date_select">Select date</string>
    <string name="duration">Duration (HH:MM)</string>
    <string name="spend_total">Today\'s total: </string>
    <string name="null_notes">No items  yet</string>
    <!--For Budget Module-->
    <string name="daily_budget">Enter new Daily Budget target: </string>
    <string name="budget">Day Budget: </string>
    <string name="weekly_budget">Week Budget: </string>
    <string name="monthly_budget">Month Budget: </string>
    <string name="update_budget">Update Budget</string>
    <string name="inform_budget">Click button below to open expenditure log</string>
    <string name="alert_budget">Budget status…</string>
    <!--For info popup-->
    <string name="exit">Close</string>
    <string name="how_to">How to Use:</string>
    <string name="information1">
        Organ Eyes is an application to help you, as a student, to organise yourself better.
        Be it your class work or extra-curricular activities this app is intended to help you
        by getting all your activities and obligations in one location for you.
    </string>

    <string name="information2">
        To begin, open the drawer menu and select a category.\n\n

        1. MILESTONES is an area in which you can jot down any notes regarding any sort of information,
        for example some topics you would like to study today or things to note for an upcoming event.

        \n\n

        2. SCHEDULES is where you take note of all classes, lectures, examinations, tests and CATs you
        may be having during the week.

        \n\n

        3. REMINDERS is clear, any reminders you would like to be notified about, e.g a pending
        assignment will be set here and you will be notified when the time arrives

        \n\n

        4. BUDGET is a special feature that allows you to plan your daily budget amount and will allow
        you to note down how much you spent on each day. It will provide daily totals and will notify
        you in the event that you overspend your budget, helping you to hopefully spend wiser and
        save money.

        \n\n
     </string>

    <string name="information3">
        Hopefully this application helps you to better organise yourself as a student and consequently
        you will begin to see improvement in your academic even non-academic life. An Organised mind
        will always prosper.
     </string>

    <string name="information4">Have Fun!</string>


</resources>
