<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_margin="8dp"
    android:background="@drawable/list_view_design"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextReminderTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="8dp"
        android:hint="@string/Alert_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextReminderDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/note_custom_design"
        android:ems="10"
        android:layout_margin="8dp"
        android:hint="@string/Alert_details"
        android:inputType="textMultiLine" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewReminderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/Alert_date"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonReminderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewReminderDate"
            android:ems="10"
            android:onClick="showDatePickerDialog"
            android:text="@string/set_Alert_date" />

        <TextView
            android:id="@+id/textViewReminderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/buttonReminderTime"
            android:layout_margin="8dp"
            android:layout_toRightOf="@+id/textViewReminderDate"
            android:padding="8dp"
            android:text="@string/Alert_time"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonReminderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewReminderTime"
            android:ems="10"
            android:onClick="showTimePickerDialog"
            android:text="@string/set_Alert_time" />
    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_done_black_24dp" />

</LinearLayout>