<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.design.widget.TabLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                app:tabSelectedTextColor="@color/colorAccent"
                app:tabTextColor="@color/colorPrimary"
                android:id="@+id/scheduleTabLayout">

                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Monday"/>
                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Tuesday"/>
                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Wednesday"/>
                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Thursday"/>
                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Friday"/>
                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Saturday"/>
            </android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerContainer"
                android:layout_below="@+id/scheduleTabLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">

            </android.support.v4.view.ViewPager>


        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/ic_schedule" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
