<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_margin="8dp"
android:padding="8dp"
android:background="@drawable/list_view_design"
android:id="@+id/recyclerview_schedule_display"
android:layout_width="match_parent"
android:layout_height="wrap_content">


<TextView
    android:id="@+id/textViewScheduleTitleDisplay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:text="@string/schedule_title" />

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewScheduleTimeFromDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_alignParentStart="true"
        android:padding="8dp"
        android:text="@string/prompt_time_from" />

    <TextView
        android:id="@+id/textViewScheduleTimeToDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_toRightOf="@+id/textViewScheduleTimeFromDisplay"
        android:text="@string/prompt_time_to" />
    <TextView
        android:id="@+id/textViewScheduleDateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_toRightOf="@+id/textViewScheduleTimeToDisplay"
        android:text="@string/spending_date" />

</RelativeLayout>

</LinearLayout>