<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background_colour"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewReminderTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:padding="8dp"
        android:ems="10"
        android:textSize="26sp"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/Alert_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewReminderDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/note_custom_design"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:ems="10"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:hint="@string/Alert_details"
        android:inputType="textMultiLine" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:id="@+id/textViewReminderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:layout_weight="40"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:text="@string/Alert_date"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewReminderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:layout_weight="40"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:text="@string/Alert_time"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_done_black_24dp" />



</LinearLayout>
